新增4个专业服务页面：卫生间、屋面、外墙、窗户防水补漏，完善SEO内链结构

--- a/index.html
+++ b/index.html
@@ -184,48 +184,56 @@
         <div class="package-title">标准套餐 放心之选</div>
         <div class="package-items">
           <div class="package-item">
-            <img src="static/image/package1.jpeg" class="package-item-image" alt="卫生间漏水维修服务套餐" />
-            <div>
-              <span class="package-item-title">卫生间漏水维修</span>
-              <span class="package-item-subtitle">&nbsp;·&nbsp;一口价超值套餐</span>
-            </div>
-            <div class="package-item-bottom">
-              <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
-              <span class="package-item-text">1小时维修，24小时可用</span>
-            </div>
+            <a href="services/weishenjian-fangshui.html" style="text-decoration: none; color: inherit;">
+              <img src="static/image/package1.jpeg" class="package-item-image" alt="卫生间漏水维修服务套餐" />
+              <div>
+                <span class="package-item-title">卫生间漏水维修</span>
+                <span class="package-item-subtitle">&nbsp;·&nbsp;一口价超值套餐</span>
+              </div>
+              <div class="package-item-bottom">
+                <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
+                <span class="package-item-text">1小时维修，24小时可用</span>
+              </div>
+            </a>
           </div>
           <div class="package-item">
-            <img src="static/image/package2.jpeg" class="package-item-image" alt="屋顶漏水维修服务套餐" />
-            <div>
-              <span class="package-item-title">屋顶漏水维修</span>
-              <span class="package-item-subtitle">&nbsp;·&nbsp;多种套餐任您挑选</span>
-            </div>
-            <div class="package-item-bottom">
-              <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
-              <span class="package-item-text">至高10年质保</span>
-            </div>
+            <a href="services/wumian-fangshui.html" style="text-decoration: none; color: inherit;">
+              <img src="static/image/package2.jpeg" class="package-item-image" alt="屋顶漏水维修服务套餐" />
+              <div>
+                <span class="package-item-title">屋顶漏水维修</span>
+                <span class="package-item-subtitle">&nbsp;·&nbsp;多种套餐任您挑选</span>
+              </div>
+              <div class="package-item-bottom">
+                <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
+                <span class="package-item-text">至高10年质保</span>
+              </div>
+            </a>
           </div>
           <div class="package-item">
-            <img src="static/image/package3.jpeg" class="package-item-image" alt="外墙漏水维修服务套餐" />
-            <div>
-              <span class="package-item-title">外墙漏水维修</span>
-              <span class="package-item-subtitle">&nbsp;·&nbsp;标准维修套餐</span>
-            </div>
-            <div class="package-item-bottom">
-              <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
-              <span class="package-item-text">平米计价，便宜到家</span>
-            </div>
+            <a href="services/waiqiang-fangshui.html" style="text-decoration: none; color: inherit;">
+              <img src="static/image/package3.jpeg" class="package-item-image" alt="外墙漏水维修服务套餐" />
+              <div>
+                <span class="package-item-title">外墙漏水维修</span>
+                <span class="package-item-subtitle">&nbsp;·&nbsp;标准维修套餐</span>
+              </div>
+              <div class="package-item-bottom">
+                <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
+                <span class="package-item-text">平米计价，便宜到家</span>
+              </div>
+            </a>
           </div>
           <div class="package-item">
-            <img src="static/image/package4.jpeg" class="package-item-image" alt="窗户漏水维修服务套餐" />
-            <div>
-              <span class="package-item-title">窗户漏水维修</span>
-              <span class="package-item-subtitle">&nbsp;·&nbsp;一口价超值套餐</span>
-            </div>
-            <div class="package-item-bottom">
-              <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
-              <span class="package-item-text">3年质保享安心</span>
-            </div>
+            <a href="services/chuanghu-fangshui.html" style="text-decoration: none; color: inherit;">
+              <img src="static/image/package4.jpeg" class="package-item-image" alt="窗户漏水维修服务套餐" />
+              <div>
+                <span class="package-item-title">窗户漏水维修</span>
+                <span class="package-item-subtitle">&nbsp;·&nbsp;一口价超值套餐</span>
+              </div>
+              <div class="package-item-bottom">
+                <img class="package-item-logo" src="static/image/icon_logo.png" alt="吉柿修房logo" />
+                <span class="package-item-text">3年质保享安心</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
