--- a/index.html
+++ b/index.html
@@ -115,6 +115,20 @@
 
   <body>
     <div id="app">
+      <!-- 导航菜单 -->
+      <nav style="background: rgba(255,255,255,0.95); padding: 15px 0; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <div style="max-width: 800px; margin: 0 auto;">
+          <a href="index.html" style="color: #409EFF; text-decoration: none; margin: 0 20px; font-weight: bold;">首页</a>
+          <a href="services/weishenjian-fangshui.html" style="color: #666; text-decoration: none; margin: 0 15px;">卫生间防水</a>
+          <a href="services/wumian-fangshui.html" style="color: #666; text-decoration: none; margin: 0 15px;">屋面防水</a>
+          <a href="services/waiqiang-fangshui.html" style="color: #666; text-decoration: none; margin: 0 15px;">外墙防水</a>
+          <a href="services/chuanghu-fangshui.html" style="color: #666; text-decoration: none; margin: 0 15px;">窗户防水</a>
+          <a href="cases.html" style="color: #666; text-decoration: none; margin: 0 15px;">成功案例</a>
+          <a href="about.html" style="color: #666; text-decoration: none; margin: 0 15px;">关于我们</a>
+          <a href="contact.html" style="color: #666; text-decoration: none; margin: 0 15px;">联系我们</a>
+        </div>
+      </nav>
+
       <!-- banner -->
       <picture>
         <source media="(min-width: 768px)" srcset="static/image/banner.jpeg" />
