--- a/index.html
+++ b/index.html
@@ -111,6 +111,16 @@
       }
     }
     </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FLRZD0L6E0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FLRZD0L6E0');
+    </script>
   </head>
 
   <body>
